# nowgoal-scraper

./: .gitignore  .~lock.match_stat_test.csv#  README.md  README.rst  analyze_urls.txt  extend_comp_urls.txt  match_stat_test.csv  match_stat_test_multy.csv  match_stat_test_multy_short.csv  pyproject.toml
data/: competitions_urls.txt  ext_comp_urls.txt  match_analize.txt  match_stat_40000_74622_short.csv  match_stat_test_20000_short.csv  match_stat_test_multy.csv  match_stat_test_multy_short.csv
nowg_parser/: make_event_data.py  match_stat_0_1000.csv  match_stat_13000_14000.csv  parser.py  stat_parser.py  statistics_parser.py  thread2.py  thread3.py  thread4.py  urls_parser.py  urls_scraper.py  weather_scraper.py
nowg_parser/data/: event_weather_stat.csv
nowg_parser/logs/: failed_stat_url.txt  loggers.py  settings.py
nowg_parser/urls/: argentina_urls.txt  champ_urls.txt  champs_urls.txt  events__urls.txt  events_urls2.txt  ext_urls.txt
tests/: test_nowg_parser.py
