[tool.poetry]
name = "nowg_parser"
version = "0.1.0"
description = ""
authors = ["Max Perepelyuk <kostin7778@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.23.0"
beautifulsoup4 = "^4.9.0"
lxml = "^4.5.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.8.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
